Resolved scroll overflow problem

--- a/client/public/style.css
+++ b/client/public/style.css
@@ -13,7 +13,9 @@
   opacity: 0;
   transition: all 0.4s;
   border-radius: 0px;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
+  z-index: 100;
   order: 1;
 }
 
@@ -97,7 +99,9 @@
   opacity: 0;
   transition: all 0.4s;
   border-radius: 0px;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
+  z-index: 100;
   order: 1;
 }
 
